fix nav when is left aligned

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -311,7 +311,14 @@
 	}
 }
 
+/* Left aligned nav */
 
+div.widget .extendednavigation ul.align-left, div.widget.extendednavigation ul.align-left {
+    @media only screen and (min-width: 768px) {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+}
 
 
 // -----------------------------
